// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders with color primary and variant link 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ sc-dlfnbm kzYLne iStTsS"
    color="primary"
    type="button"
  />
</DocumentFragment>
`;

exports[`Renders with color primary and variant outlined 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ sc-gsTCUz kzYLne fqKVRQ"
    color="primary"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with color danger 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ ekmbQa"
    color="danger"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with color default 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ drdGNm"
    color="default"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with color primary 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ kzYLne"
    color="primary"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with variant default 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ drdGNm"
    color="default"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with variant link 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ sc-dlfnbm drdGNm gzhhnD"
    color="default"
    type="button"
  />
</DocumentFragment>
`;

exports[`renders with variant outlined 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ sc-gsTCUz drdGNm lgAtkk"
    color="default"
    type="button"
  />
</DocumentFragment>
`;
